--- a/myapp/templates/myapp/bet.html
+++ b/myapp/templates/myapp/bet.html
@@ -1,50 +1,33 @@
 <!-- myapp/templates/myapp/bet.html -->
 
-{% extends "myapp/game.html" %} {% block bet %} {% load static %}
-<p id="timer"></p>
-{% for player, bet in player_bets.items %}
-{% if forloop.counter0 == 0 %}
-<div class="bet-content">
-    <div class="bet-selector">
-        {% for card in hand_cards %} 
-            {% if forloop.counter0 == bet.value %}
-                <button
-                    type="button"
-                    class="bet-buttons active"
-                    value="{{ forloop.counter0 }}"
-                >
-                    {{ forloop.counter0 }}
-                </button>
-            {% else %}
-                <button type="button" class="bet-buttons" value="{{ forloop.counter0 }}">
-                    {{ forloop.counter0 }}
-                </button>
-            {% endif %} 
-        {% endfor %}
-    </div>
-</div> 
-{% else %}
-    <div
-        class="player-hand"
-        style="transform: translateX(calc(35vw * cos(270deg - (({{ forloop.counter0 }} * 360deg) / {{ player_bets|length }})))) translateY(calc(10vh + (-30vh * sin(270deg - (({{ forloop.counter0 }} * 360deg) / {{ player_bets|length }}))))) rotate(180deg) translateY(-50px); z-index: {{ forloop.counter }};"
-    >
-        <p style="transform: rotate(180deg) translateY(-8.9vh) translateX(-2.7vw)">
-            {{ player.user.username }} : {% if bet %}{{ bet.value }}{% else %}No bet{% endif %}
-        </p>
-        {% for card in hand_cards %}
-        <img
-            class="card player-card"
-            src="{% static 'myapp/images/cards/back.png' %}"
-            style="height: max(12vh, 100px)px; transform: rotate(calc(({{ hand_cards|length }} - 1)* -5deg + ({{ forloop.counter }} - 1) * 10deg + 180deg)); z-index: {{ forloop.counter }};"
-        />
-        {% endfor %}
-    </div>
-{% endif %}
-{% endfor %}
+{% extends "myapp/game.html" %} {% block board %} {% load static %}
+<p id="timer" value="{{ start_timer }}"></p>
+<div class="on-gameboard">
+	{% for card in hand_cards %} 
+		{% if forloop.counter0 == bet.value %}
+			<button
+				type="button"
+				class="bet-buttons active"
+				value="{{ forloop.counter0 }}"
+			>
+				{{ forloop.counter0 }}
+			</button>
+		{% else %}
+			<button type="button" class="bet-buttons" value="{{ forloop.counter0 }}">
+				{{ forloop.counter0 }}
+			</button>
+		{% endif %} 
+	{% endfor %}
+</div>
 <script>
 	document.addEventListener('DOMContentLoaded', function () {
 		const buttons = document.querySelectorAll('.bet-buttons');
 		const room_id = document.querySelector('input[name="room_id"]').value;
+        const timerElement = document.getElementById('timer');
+
+        if(timerElement.getAttribute("value") == "True"){
+            startTimer();
+        }
 
 		buttons.forEach((button) => {
 			button.addEventListener('click', function () {
@@ -55,36 +38,34 @@
 				this.classList.add('active');
 				const betValue = this.value;
 
-                fetch('/bet/', {
+                fetch('/action/', {
 					method: 'POST',
 					headers: {
 						'Content-Type': 'application/json',
 						'X-CSRFToken': '{{ csrf_token }}',
 					},
 					body: JSON.stringify({
+                        action: 'bet',
 						bet_value: betValue,
 						room_id: room_id,
 					}),
 				})
-				.then((response) => response.json())
-				.then((data) => {
-                    if (data.start_timer) {
-                        startTimer();
-                    }
-                });
+                .then((response) => response.json())
 			});
 		});
 	});
 
 	function startTimer() {
+        const room_id = document.querySelector('input[name="room_id"]').value;
+        const timerElement = document.getElementById('timer');
+
 		var seconds = 10;
-		var timerElement = document.getElementById('timer');
         timerElement.textContent = seconds;
 
-		var countdown = setInterval(function () {
+		const countdown = setInterval(function () {
 			seconds--;
 			timerElement.textContent = seconds;
-             // Changer la couleur du texte en fonction du nombre de secondes restantes
+
             if (seconds >= 1 && seconds <= 3) {
                 timerElement.style.color = "red";
             } else if (seconds >= 4 && seconds <= 6) {
@@ -96,23 +77,19 @@
 			if (seconds <= 0) {
 				clearInterval(countdown);
 				timerElement.textContent = 0;
-				fetch('/next/', {
+				fetch('/action/', {
 					method: 'POST',
 					headers: {
 						'Content-Type': 'application/json',
 						'X-CSRFToken': '{{ csrf_token }}',
 					},
 					body: JSON.stringify({
-						room_id: document.querySelector('input[name="room_id"]')
-							.value,
+                        action: 'game_phase',
+						room_id: room_id,
 					}),
 				}).then((response) => response.json())
-                .then(() => {
-                    // Actualiser la page
-                    location.reload();
-                });
 			}
 		}, 1000);
 	}
 </script>
-{% endblock bet %}
+{% endblock board %}
