--- a/myapp/templates/myapp/game.html
+++ b/myapp/templates/myapp/game.html
@@ -9,20 +9,57 @@
             name="room_id"
             value="{{ room_id }}"
         />
-        {% comment %} {% if step == "bet" %} {% endcomment %}
-            {% block bet %}{% endblock %}
-        {% comment %} {% elif step == "table" %}
-            {% block table %}{% endblock %}
-        {% endif %} {% endcomment %}
+        {% for player, bet in player_bets.items %}
+            {% if forloop.counter0 == 0 %} 
+            {% comment %} Première itération donc player = moi {% endcomment %}
+                {% block board %}{% endblock board %}
+            {% else %}
+            {% comment %} Les autres joueurs {% endcomment %}
+                <div
+                    class="player-hand"
+                    style="transform: translateX(calc(35vw * cos(270deg - (({{ forloop.counter0 }} * 360deg) / {{ player_bets|length }})))) translateY(calc(10vh + (-30vh * sin(270deg - (({{ forloop.counter0 }} * 360deg) / {{ player_bets|length }}))))) rotate(180deg) translateY(-50px); z-index: {{ forloop.counter }};"
+                >
+                    <p style="transform: rotate(180deg) translateY(-8.9vh) translateX(-2.7vw)">
+                        {{ player.user.username }} : {% if bet %}{{ bet.value }}{% else %}No bet{% endif %}
+                    </p>
+                    {% for card in hand_cards %}
+                    <img
+                        class="card player-card"
+                        src="{% static 'myapp/images/cards/back.png' %}"
+                        style="height: max(12vh, 100px)px; transform: rotate(calc(({{ hand_cards|length }} - 1)* -5deg + ({{ forloop.counter }} - 1) * 10deg + 180deg)); z-index: {{ forloop.counter }};"
+                    />
+                    {% endfor %}
+                </div>
+            {% endif %}
+        {% endfor %}
     </div>
     <div class='your-hand'>
         {% for hand_card in hand_cards %}
             {% if forloop.counter > 1 %}
-                <img class='card hand-card hand-overlap' src="{% static 'myapp/images/cards/' %}{{ hand_card.card.name }}.png" style="z-index: {{ forloop.counter }};"></img>
+                <img class='card hand-card hand-overlap' src="{% static 'myapp/images/cards/' %}{{ hand_card.card.name }}.png" style="z-index: {{ forloop.counter }};" onclick="playCard('{{ hand_card.card.name }}')"></img>
             {% else %}
-                <img class='card hand-card' src="{% static 'myapp/images/cards/' %}{{ hand_card.card.name }}.png" style="z-index: {{ forloop.counter }};"></img>
+                <img class='card hand-card' src="{% static 'myapp/images/cards/' %}{{ hand_card.card.name }}.png" style="z-index: {{ forloop.counter }};" onclick="playCard('{{ hand_card.card.name }}')"></img>
             {% endif %}
         {% endfor %}
     </div>
 </div>
+<script>
+function playCard(cardName) {
+    const room_id = document.querySelector('input[name="room_id"]').value
+
+    fetch('/action/', {
+        method: 'POST',
+        headers: {
+            'Content-Type': 'application/json',
+            'X-CSRFToken': '{{ csrf_token }}',
+        },
+        body: JSON.stringify({
+            action: 'play',
+            card_name: cardName,
+            room_id: room_id,
+        }),
+    })
+    .then((response) => response.json())
+}
+</script>
 {% endblock content %}
